<resources>
    <string name="app_name">FitDiet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Loggin in panel -->
    <string name="log_in_text">Zaloguj się</string>
    <string name="log_in_email_hint">E-mail</string>
    <string name="log_in_password_hint">Hasło</string>
    <string name="sign_in_button">Zaloguj</string>
    <string name="sign_up_button">Rejestracja</string>
    <!-- Register panel -->
    <string name="register_button">Zarejestruj</string>
    <string name="register_textView">Zarejestruj się</string>
    <string name="repeat_register_password_hint">Powtórz hasło</string>
    <string name="log_in_nick_hint">Nick</string>
    <!-- Profile panel -->
    <string name="calculate_calories_again">Oblicz ponownie kalorie</string>
    <string name="change_profile_data">Zmień dane profilu</string>


    <!-- Calculator view -->
    <string name="calculator">Kalkulator kalorii</string>
    <string name="giveData">Wprowadź swoje dane</string>
    <string name="giveName">Podaj imię</string>
    <string name="gender">Płeć</string>
    <string name="female">Kobieta</string>
    <string name="male">Mężczyzna</string>
    <string name="age">Wiek</string>
    <string name="giveAge">Podaj wiek</string>
    <string name="height">Wzrost</string>
    <string name="giveHeight">Podaj wzrost w [cm]</string>
    <string name="weight">Masa ciała</string>
    <string name="giveWeight">Podaj masę ciała w [kg]</string>
    <string name="activityLvl">Jaki jest Twój poziom aktywności</string>
    <string name="goal">Jaki jest twój cel</string>
    <string name="save">Zapisz</string>
    <string name="logout">Wyloguj</string>
    <string-array name="activityLvl_array">
        <item>Brak aktywności, praca siedząca</item>
        <item>Praca siedząca i 1-2 treningi w tygodniu</item>
        <item>Praca siedząca i treningi 3-4 razy w tygodniu</item>
        <item>Praca fizyczna i treningi 1-2 razy w tygodniu</item>
        <item>Praca fizyczna i 3-4 treningi w tygodniu</item>
        <item>Zawodowi sportowcy</item>
    </string-array>
    <string-array name="goal_array">
        <item>Chcę schudnąć</item>
        <item>Chcę nabrać masy</item>
        <item>Chcę utrzymać wagę</item>
        <item>Rekompozycja (wzrost mięśni i spalanie tłuszczu)</item>
    </string-array>

    <!-- Validation calculator messages -->
    <string name="incorrect_age">Wiek pusty lub wprowadzony nieprawidłowo</string>
    <string name="below_value_age">Wiek musi być poniżej 120 lat</string>
    <string name="at_least_value_age">Musisz mieć co najmniej 16 lat</string>
    <string name="incorrect_height">Wzrost pusty lub wprowadzony nieprawidłowo</string>
    <string name="below_value_height">Wzrost musi być wynosić poniżej 220 cm</string>
    <string name="at_least_value_height">Minimalny wzrost wynosi 120 cm</string>
    <string name="incorrect_weight">Waga pusta lub wprowadzona nieprawidłowo</string>
    <string name="below_value_weight">Waga musi być wynosić poniżej 800 kg</string>
    <string name="at_least_value_weight">Minimalna waga wynosi 40 kg</string>

    <!-- Validation add product messages -->
    <string name="add_image_validator">Musisz dodać zdjęcie</string>
    <string name="title_too_long">Tytul pusty lub za dlugi</string>
    <string name="text_too_long">Tekst pusty lub za dlugi</string>

    <string name="calories_empty_or_incorrect">Pole z kaloriami puste lub nieprawidłowe</string>
    <string name="proteins_empty_or_incorrect">Pole z białkiem puste lub nieprawidłowe</string>
    <string name="carbohydrates_empty_or_incorrect">Węglowodany puste lub nieprawidłowe</string>
    <string name="weight_empty_or_incorrect">Wartość podanej gramatury jest pusta nieprawidłowa</string>
    <string name="fat_empty_or_incorrect">Tłuszcze puste lub nieprawidłowe</string>
    <string name="product_or_incorrect">Produkt dodany pomyslnie</string>
    <string name="values_format_incorrect">Format wprowadzanych liczb nieprawidłowy</string>


    <!-- Home view -->
    <string name="title_row">Nazwa dania</string>
    <string name="all_kcal_all_row">Całkowite kcal:   </string>
    <string name="kcal_all_row">Kcal:   </string>
    <string name="protein_row">Białko:   </string>
    <string name="carbohydrates_row">Węglowodany:   </string>
    <string name="fat_row">Tłuszcze:   </string>
    <string name="weight_value">Waga:   </string>
    <string name="weight_value_plus">Waga w gramach:   </string>


    <!-- Add new product -->
    <string name="add_description">Wprowadź opis</string>
    <string name="description">Opis</string>
    <string name="add_image">Dodaj zdjęcie produktu</string>
    <string name="addButtonText">+</string>
    <string name="addProductButton">Dodaj produkt</string>
    <string name="kcal">Kcal</string>
    <string name="weightItem">Waga</string>
    <string name="protein">Białko</string>
    <string name="carbohydrates">Węglowodany</string>
    <string name="fat">Tłuszcze</string>

</resources>