<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fragment_margin"
    android:paddingTop="@dimen/big_swipe_padding"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/log_in_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sign_in_textView" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/view_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_log_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_email_hint"
            android:inputType="textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_log_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_in_password_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginLogButton"
        android:layout_marginTop="@dimen/view_big_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_medium"
        android:text="@string/sign_in_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/registerButton"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_medium"
        android:text="@string/sign_up_button"
        android:textColor="@android:color/white" />

</LinearLayout>
